changed data source for gejson and still working on displaying api data in markers

--- a/src/pageComponents/mapOfIreland.css
+++ b/src/pageComponents/mapOfIreland.css
@@ -1,3 +1,7 @@
 .leaflet-container{
     background-color: white;
 }
+
+.leaflet-default-icon-path {
+    background-image: url(https://unpkg.com/leaflet@1.7.1/dist/images/marker-icon.png);
+}
